--- a/public/galletas/202012/hohmann.html
+++ b/public/galletas/202012/hohmann.html
@@ -203,13 +203,14 @@
             <br>
             <p>La increíble emoción que un ser humano experimenta al ver fotogramas de lanzamientos espaciales, o si eres afortunado, escuchar con deleite como el motor de combustión del cohete produce la energía necesaria para despegar, reflejándose por un magnífico estruendo es algo que cambia la perspectiva en un segundo. A partir de ese momento, es casi imposible no preguntarse, y ahora… ¿Cómo llegará a su destino? ¿Qué ruta debe seguir para salir de la atmósfera? ¿Cómo trazan esa trayectoria?</p>
             <figure class="w-75 mx-auto">
-              <img src="20122401img/1.jpg" alt="Venus" class="w-100">
+              <img src="20122401img/1.jpg" alt="Órbita de transferencia de Hohmann" class="w-100">
               <figcaption style="font-size: 70%; font-weight: lighter;"> Órbita de transferencia de Hohmann.<br> Créditos de la imagen: NASA </figcaption>
             </figure>
             <h2>¿Qué es la órbita de transferencia?</h2>
             <p>Se sabe, esencialmente que para desplazarse en el espacio es necesario utilizar impulsos indirectos para poder lograr maniobras impulsivas. Sin embargo, para poder escapar de la atmósfera terrestre se requieren de rutas específicas, que no solo sean seguras y eficaces, pero también óptimas en una relación de consumo de combustible.</p>
             <p>La órbita de transferencia es la trayectoria para seguir por parte de un objeto para desplazarse desde una órbita circular de radio “x” a una de radio “y”. La existencia de este tipo de órbitas de trayectoria, como se puede deducir, se expresa en medidas de radio.</p>
-            <img src="20122401img/2.jpg" alt="Venus" class="w-100">
+            <figure class="w-75 mx-auto">
+              <img src="20122401img/2.jpg" alt="Órbita de transferencia de Hohmann" class="w-100">
               <figcaption style="font-size: 70%; font-weight: lighter;"> Órbita de transferencia de Hohmann.<br> Créditos de la imagen: The Planetary Society. Planetary.org</figcaption>
             </figure>
             <h2>Órbita de transferencia de Hohmann: Eficiencia.</h2>
@@ -217,14 +218,14 @@
             <p>Walter Hohman fue un ingeniero alemán que conformó un gran legado de conocimiento en el campo aeroespacial, y como se podrá concluir, es el creador de la “órbita de transferencia de Hohmann”, nacida gracias al enorme interés que el ingeniero poseía hacia los vuelos espaciales interplanetarios. Dicha órbita traza una dirección que comienza por un impulso inicial de la nave, en tierra y uno final, en la llegada a nuestro destino, el cual podría ser Marte, sí así lo deseáramos. En el camino, la nave dibuja una media elipse con el Sol, que se ubicaría como uno de sus focos y con la Tierra y Marte como vértices de la figura.</p>
             <p>Para conformar nuestra trayectoria, se tendría en cuenta datos como la velocidad inicial y final, el impulso, los valores numéricos y las ventanas de lanzamiento.</p>
             <p>La velocidad inicial y final se define en proporciones entre las distancias al sol, de las cuales se desprenden las siguientes expresiones:</p>
-            <img src="20122401img/3.jpg" alt="Venus" class="w-100">
+            <img src="20122401img/3.jpg" alt="Fórmula" class="w-100">
             <p>Teniendo en cuenta la atracción terrestre, la velocidad de escape y la velocidad inicial, se concluye, para cuestiones de impulso, la siguiente expresión.</p>
-            <img src="20122401img/4.jpg" alt="Venus" class="w-100">
+            <img src="20122401img/4.jpg" alt="Fórmula" class="w-100">
             <p>Y para materia de las ventanas de lanzamiento, la órbita de tranferencia de Hohmann funciona si las posiciones de la Tierra y Marte coinciden como puntos extremos de la elipse imaginaria, por lo cual, la posición ideal de lanzamiento se daría una vez cada 781 días.</p>
-            <p>Esperamos que este artículo te haya podido explicar un poco mejor el como viajar económicamente desde nuestro hogar hasta Marte. ¡Sigue aliemntando tu cerebro con más galletas científicas!</p>
+            <p>Esperamos que este artículo te haya podido explicar un poco mejor el como viajar económicamente desde nuestro hogar hasta Marte. ¡Sigue alimentando tu cerebro con más galletas científicas!</p>
             <h5>Referencias</h5>
             <p>Moreno Vega, V., & Aeyels, D. (2005). La transferencia de Hohmann y la propiedad de consumo equivalente de combustible. Universidad, Ciencia y Tecnología, 9(33), 11-16.</p>
-            <p>Universidad de Sevilla. (2010). Departamento de Físcia Aplicada III. Wiki. Recuperado de: <a href="http://laplace.us.es/wiki/index.php/%C3%93rbita_de_transferencia" target="_blank" class="text-warning text-break" rel="nofollow">http://laplace.us.es/wiki/index.php/%C3%93rbita_de_transferencia<i class="fas fa-external-link-alt"></i></a></p>
+            <p>Universidad de Sevilla. (2010). Departamento de Físcia Aplicada III. Wiki. Recuperado de: <a href="http://laplace.us.es/wiki/index.php/%C3%93rbita_de_transferencia" target="_blank" class="text-warning text-break" rel="nofollow">http://laplace.us.es/wiki/index.php/%C3%93rbita_de_transferencia <i class="fas fa-external-link-alt"></i></a></p>
             <!--Aquí termina el contenido-->
           </div>
           <div class="row justify-content-start mb-2" id="btnsFL">
