--- a/public/galletas/202012/que-tan-grandes-son-los-extraterrestres.html
+++ b/public/galletas/202012/que-tan-grandes-son-los-extraterrestres.html
@@ -206,30 +206,30 @@
               <img src="20122901img/whale-elephant.jpg" alt="Comparación: elefante y ballena azul" class="w-100">
               <figcaption style="font-size: 70%; font-weight: lighter;">Comparación: elefante y ballena azul<br>Encyclopædia Britannica, Inc.</figcaption>
             </figure>
-            <p>El animal terrestre más grande es el elefante africano: miden casi 4 metros y pueden llegar a pesar más de 6 toneladas. Sin embargo, las ballenas azules los hacen parecer pequeños, miden de 23 a 30 metros y pesan hasta 136 toneladas, además, la ballena azul más grande jamás registrada medía 33 metros y pesaba más 176 toneladas; tan larga como un edificio de 10 pisos y tan pesada como 29 elefantes.</p>
+            <p>El animal terrestre más grande es el elefante africano: miden casi 4 metros y pueden llegar a pesar más de 6 toneladas. Sin embargo, las ballenas azules los hacen parecer pequeños, miden de 23 a 30 metros y pesan hasta 136 toneladas, además, la ballena azul más grande jamás registrada medía 33 metros y pesaba más de 176 toneladas; tan larga como un edificio de 10 pisos y tan pesada como 29 elefantes.</p>
             <br>
-            <h2>Y, ¿qué límita el tamaño?</h2>
-            <p>La principal límitante para el crecimiento de un organismo es la relación entre su peso y la fuerza que puede soportar. Esta relación está descrita por la ley cuadrático-cúbica y dice que cuando el tamaño aumenta, la superficie aumenta en proporción cuadrática y el volumen en proporción cúbica.</p>
+            <h2>Y, ¿qué limita el tamaño?</h2>
+            <p>La principal limitante para el crecimiento de un organismo es la relación entre su peso y la fuerza que puede soportar. Esta relación está descrita por la ley cuadrático-cúbica y dice que cuando el tamaño aumenta, la superficie aumenta en proporción cuadrática y el volumen en proporción cúbica.</p>
             <figure class="w-75 mx-auto">
               <img src="20122901img/squareCube.png" alt="Ley cuadrático-cúbica" class="w-100 bg-light">
               <figcaption style="font-size: 70%; font-weight: lighter;">Pantoja, J. para Science Cookies.<br>Ley cuadrático-cúbica</figcaption>
             </figure>
             <p>Del mismo modo, un organismo 2 veces el peso que otro necesitaría 4 veces la superficie del segundo. Para poder crecer más, sería necesaria una estructura ósea más fuerte y ligera, además las proporciones de las extremidades no serían las que podríamos imaginar y probablemente serían más anchas y cortas. Debido a esos cambios y que cantidades aumentan muy rápido, un organismo demasiado grande tendría problemas para sobrevivir y reproducirse.</p>
-            <p>Los elefantes por su parte, pueden mantener su peso gracias a que caminan en cuatro patas y son bastante amplias, sin embargo, se ven limitados en otros aspectos, como el hecho de que no peuden saltar. Las ballenas, por su parte, se benefician del empuje que les provee el agua, como parte de su peso es contrarrestado, les permite ser más grandes.</p>
+            <p>Los elefantes, por su parte, pueden mantener su peso gracias a que caminan en cuatro patas y son bastante amplias, sin embargo, se ven limitados en otros aspectos, como el hecho de que no pueden saltar. Las ballenas, por su parte, se benefician del empuje que les provee el agua, como parte de su peso es contrarrestado, les permite ser más grandes.</p>
             <br>
             <h2>Humanos en Marte</h2>
-            <p>Ya que el tamaño se ve límitado por el peso del organismo, pueden crecer más si la gravedad es menor. Es posible que los humanos establescan una colonia en el planeta Marte en el futuro; Marte tiene una gravedad de aproximadamente un tercio de la de la Tierra y tomándolo cómo ejemplo, se ha teorizado que las personas nacidas en Marte crecerían más debido a que su columna vertebral a menos fuerza por parte del planeta y podrían aumentar varios centímetros su altura, comparada con la que habrían tenido de haber crecido en la Tierra.</p>
+            <p>Ya que el tamaño se ve limitado por el peso del organismo, pueden crecer más si la gravedad es menor. Es posible que los humanos establezcan una colonia en el planeta Marte en el futuro; Marte tiene una gravedad de aproximadamente un tercio de la de la Tierra y tomándolo cómo ejemplo, se ha teorizado que las personas nacidas en Marte crecerían más debido a que su columna vertebral a menos fuerza por parte del planeta y podrían aumentar varios centímetros su altura, comparada con la que habrían tenido de haber crecido en la Tierra.</p>
             <br>
             <h2>¿Cómo sería en otros planetas?</h2>
             <figure class="w-75 mx-auto">
               <img src="20122901img/extraterrestre.jpg" alt="Extraterrestres humanoides" class="w-100">
             </figure>
-            <p>Si bien no podemos saber a ciencia cierta que aspecto tendrían los extraterrestres, para responder a nuestra pregunta, podemos suponer que serían parecidos a nosotros (morfológicamente hablando) para ser capaces de desarrollar tecnología. Necesitan extremidades para poder usar herramientas y para desplazarse. Es por ello que para los cálculos siguientes daremos por hecho que tienen la misma resistencia, fuerza, peso y proporción que los humanos; y de manera análoga para los animales.</p>
+            <p>Si bien no podemos saber a ciencia cierta qué aspecto tendrían los extraterrestres, para responder a nuestra pregunta, podemos suponer que serían parecidos a nosotros (morfológicamente hablando) para ser capaces de desarrollar tecnología. Necesitan extremidades para poder usar herramientas y para desplazarse. Es por ello que para los cálculos siguientes daremos por hecho que tienen la misma resistencia, fuerza, peso y proporción que los humanos; y de manera análoga para los animales.</p>
             <p>La presión que soportan nuestros pies está dada por:</p>
             <figure class="w-25 mx-auto">
               <img src="20122901img/formula1.png" alt="Fórmula de presión en nuestros pies" style="height: 8vh">
             </figure>
-            <p>Y la que soportiarían si fueramos de un tamaño <i>q  </i>  veces el nuestro y con otra gravedad (<i>g´ </i> ).</p>
+            <p>Y la que soportarían si fuéramos de un tamaño <i>q  </i>  veces el nuestro y con otra gravedad (<i>g´ </i> ).</p>
             <figure class="w-25 mx-auto">
               <img src="20122901img/formula2.png" alt="Fórmula de presión en nuestros pies con otra gravedad" style="height: 8vh">
             </figure>
