--- a/public/drafts.html
+++ b/public/drafts.html
@@ -52,22 +52,6 @@
     <link rel="stylesheet" href="css/main.css">
 
     <style>
-      .tbar {
-        position: fixed;
-        top: 20%;
-        width: 3pc;
-        z-index: 100020;
-        background: none;
-        animation-name: slideInRight;
-        animation-fill-mode: both;
-        animation-timing-function: ease-out;
-        animation-duration: .4s;
-      }
-      .tbar-right {
-        right: 0;
-        float: right;
-        left: auto;
-      }
       .cardBorder{
         border-width: 3px;
         border-radius: 10px;
@@ -166,6 +150,7 @@
     </div>
     
     <!--Página-->
+    
     <!--Side toolbar-->
     <div class="tbar tbar-right btn-toolbar mb-3" role="toolbar">
       <div class="btn-group-vertical mr-2 btn-group-lg" role="group">
@@ -257,37 +242,7 @@
               </ul>
             </nav>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1 row-cols-lg-2 row-cols-xl-3" id="crdContainer">
-              <!--Card example-
-              <div class="col mb-4">
-                <div class="card text-dark bg-light border-primary h-100 cardBorder">
-                  <div class="card-header bg-light m-0 py-0 text-right">
-                    <div class="row justify-content-between">
-                      <div class="col-auto p-0">
-                        <span class="badge badge-warning">Draft</span>
-                      </div>
-                      <div class="col-auto p-0 ml-auto">
-                        <div class="dropdown">
-                          <button class="btn btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-h"></i></button>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="asdl">Editar</a>
-                            <a class="dropdown-item">Another action</a>
-                            <a class="dropdown-item">Something else here</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <a href="#" class="text-decoration-none text-dark">
-                    <img src="publicidad/CubreMid.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h3 class="card-title">Card title</h3>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="card-footer text-muted">2 days ago</div>
-                  </a>
-                </div>
-              </div>
-              -->
+              <!--Cards-->
             </div>
             <nav aria-label="pageNavB" class="d-none" id="pgNavB">
               <ul class="pagination justify-content-end">
