--- a/public/galletas/202012/hohmann.html
+++ b/public/galletas/202012/hohmann.html
@@ -197,7 +197,7 @@
           <p class="text-center"><img class="mt-3 mb-4 w-75" src="../../img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
           <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
             <!--Aquí va el contenido-->
-            <h1 class="text-center">Órbita de transferencia de Hohmann: DIY Viaje económico desde la tierra a Marte</h1>
+            <h1 class="text-center">Órbita de transferencia de Hohmann: DIY Viaje económico desde la Tierra a Marte</h1>
             <p>24/12/2020</p>
             <p>Autor: Andrea Garma</p>
             <br>
@@ -214,7 +214,7 @@
               <figcaption style="font-size: 70%; font-weight: lighter;"> Órbita de transferencia de Hohmann.<br> Créditos de la imagen: The Planetary Society. Planetary.org</figcaption>
             </figure>
             <h2>Órbita de transferencia de Hohmann: Eficiencia.</h2>
-            <p>A simple vista, se podría decir que el camino más eficiente para trasladarnos de un lugar a otro es la línea recta, sin embargo, dando una mirada más de cerca a este planteamiento, nos encontramos con que las naves, al salir del campo gravitatorio de la tierra, no siguen un M.R.U, por el contrario, se someten a las leyes gravitatorias impuestas por la gravedad solar. Lo anterior infiere un movimiento elíptico ejemplificado con aquel que sufren el resto de los cuerpos celestes de nuestro vecindario. Si se deseara llevar una ruta de línea recta, probablemente se necesitarían cantidades colosales de combustible -y costosas- para dar impulso suficiente a la nave y que esta pueda lograr la trayectoria poco eficiente.</p>
+            <p>A simple vista, se podría decir que el camino más eficiente para trasladarnos de un lugar a otro es la línea recta, sin embargo, dando una mirada más de cerca a este planteamiento, nos encontramos con que las naves, al salir del campo gravitatorio de la Tierra, no siguen un M.R.U, por el contrario, se someten a las leyes gravitatorias impuestas por la gravedad solar. Lo anterior infiere un movimiento elíptico ejemplificado con aquel que sufren el resto de los cuerpos celestes de nuestro vecindario. Si se deseara llevar una ruta de línea recta, probablemente se necesitarían cantidades colosales de combustible -y costosas- para dar impulso suficiente a la nave y que esta pueda lograr la trayectoria poco eficiente.</p>
             <p>Walter Hohman fue un ingeniero alemán que conformó un gran legado de conocimiento en el campo aeroespacial, y como se podrá concluir, es el creador de la “órbita de transferencia de Hohmann”, nacida gracias al enorme interés que el ingeniero poseía hacia los vuelos espaciales interplanetarios. Dicha órbita traza una dirección que comienza por un impulso inicial de la nave, en tierra y uno final, en la llegada a nuestro destino, el cual podría ser Marte, sí así lo deseáramos. En el camino, la nave dibuja una media elipse con el Sol, que se ubicaría como uno de sus focos y con la Tierra y Marte como vértices de la figura.</p>
             <p>Para conformar nuestra trayectoria, se tendría en cuenta datos como la velocidad inicial y final, el impulso, los valores numéricos y las ventanas de lanzamiento.</p>
             <p>La velocidad inicial y final se define en proporciones entre las distancias al sol, de las cuales se desprenden las siguientes expresiones:</p>
