--- a/public/editar.html
+++ b/public/editar.html
@@ -113,7 +113,7 @@
 
   <!--Add section modal-->
   <div class="modal fade" id="mdlPlusSect" tabindex="-1" aria-labelledby="mdlPlusSectL" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="mdlPlusSectL">Añadir una sección</h5>
@@ -123,13 +123,115 @@
         </div>
         <div class="modal-body">
           <div class="d-flex flex-wrap">
-            <button class="btn btn-scckie m-2" onclick="plusSect('parra');" data-dismiss="modal" >Párrafo</button>
-            <button class="btn btn-scckie m-2" onclick="plusSect('html');" data-dismiss="modal" >HTML</button>
+            <button class="btn btn-scckie m-2" onclick="plusSect('parra');" data-dismiss="modal">Párrafo</button>
+            <button class="btn btn-scckie m-2" onclick="plusSect('html');" data-dismiss="modal">HTML</button>
+            <button class="btn btn-scckie m-2" onclick="plusSect('youtube');" data-dismiss="modal">Youtube</button>
+            <button class="btn btn-scckie m-2" onclick="plusSect('medSimple');" data-dismiss="modal">Multimedia</button>
           </div><!--Add more@#-->
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary btn-block" data-dismiss="modal">Cancelar</button>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Manage media modal-->
+  <div class="modal fade" id="mdlMedMan" tabindex="-1" aria-labelledby="mdlMedManL" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="mdlMedManL">Administra las imágenes</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="row row-cols-1 row-cols-md-3" id="contMedMan">
+            <div class="col mb-4">
+              <div class="card text-dark bg-light h-100 cardBorder" style="border-color: #343a40;">
+                  <a type="button" data-toggle="modal" data-target="#mdlAddMed" data-dismiss="modal" aria-label="Close" class="text-decoration-none text-dark h-100 d-flex align-items-center justify-content-center" onclick="addFrom=0;">
+                    <h1 style="font-size: 6rem;" class="mb-0"><i class="far fa-plus-square"></i></h1>
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary btn-block" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Choose media modal-->
+  <div class="modal fade" id="mdlMedCho" tabindex="-1" aria-labelledby="mdlMedChoL" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="mdlMedChoL">Administra las imágenes</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="row row-cols-1 row-cols-md-3" id="contMedCho">
+            <div class="col mb-4">
+              <div class="card text-dark bg-light h-100 cardBorder" style="border-color: #343a40;">
+                  <a type="button" data-toggle="modal" data-target="#mdlAddMed" data-dismiss="modal" aria-label="Close" class="text-decoration-none text-dark h-100 d-flex align-items-center justify-content-center" onclick="addFrom=0;">
+                    <h1 style="font-size: 6rem;" class="mb-0"><i class="far fa-plus-square"></i></h1>
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary btn-block" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Add media modal-->
+  <div class="modal fade" id="mdlAddMed" tabindex="-1" role="dialog" aria-labelledby="mdlAddMedL" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="mdlAddMedL">Escoge un archivo multimedia para añadir a la galleta</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="btnCanNewMed1"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <div class="row mb-3 w-100 py-0 justify-content-center mx-auto"><img id="prevNewMed" class="w-75 m-0" src=""></div>
+            <form id="frmAddMed">
+              <div class="row mb-3">
+                <div class="form-check form-check-inline ml-3">
+                  <input class="form-check-input" type="radio" name="radsMedSrc" id="inMedSrc0" value="home" required>
+                  <label class="form-check-label" for="inMedSrc0">Propio</label>
+                </div>
+                <div class="form-check form-check-inline ml-3">
+                  <input class="form-check-input" type="radio" name="radsMedSrc" id="inMedSrc1" value="out">
+                  <label class="form-check-label" for="inMedSrc1">Externo</label>
+                </div>
+              </div>
+              <div class="custom-file mb-5 d-none" id="inNewMedFileCont">
+                <input type="file" class="custom-file-input" id="inNewMed">
+                <label class="custom-file-label" for="inNewMed" data-browse="Elegir" id="inNewMedL">Subir archivo</label>
+              </div>
+              <div class="row mb-2 d-none" id="inNewMedUrlCont">
+                <div class="col">
+                  <label for="inNewMedUrl">URL del archivo</label>
+                  <input id="inNewMedUrl" class="form-control" type="text" placeholder="https://imagen.com">
+                </div>
+              </div>
+              <button type="submit" class="btn btn-primary btn-block" id="btnCnfNewMed">Añadir</button>
+            </form>
+            <div class="progress mb-2 d-none" id="barNewMedCont">
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="barNewMed"></div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary btn-block" data-dismiss="modal" id="btnCanNewMed0">Cancelar</button>
+          </div>
       </div>
     </div>
   </div>
@@ -145,6 +247,7 @@
   <div class="tbar tbar-right btn-toolbar mb-3" role="toolbar">
     <div class="btn-group-vertical mr-2 btn-group-lg" role="group">
       <button class="btn btn-scckie" data-toggle="modal" data-target="#mdlPlusSect" onclick="toAdd=docDat.cont.length-1;"><i class="fas fa-plus"></i></button>
+      <button class="btn btn-scckie" data-toggle="modal" data-target="#mdlMedMan"><i class="fas fa-image"></i></button>
     </div>
   </div>
   <div class="container-fluid text-white"
@@ -216,7 +319,7 @@
       <div class="col-12 col-sm-9 col-md-6 col-xl-7 py-md-3 pl-md-3">
         <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg"
             alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
-        <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
+        <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rgb(87, 35, 139);">
           <!--Aquí va el contenido-->
           <form id="frmFile">
             <div class="row mb-2">
@@ -236,19 +339,22 @@
                 <button class="btn btn-light btn-link-scckie mx-3" type="submit"><i class="fas fa-check"></i></button>
             </div>
           </form>
-          <div id="cont"></div>
-          <!--Aquí termina el contenido-->
         </div>
-        <div class="row justify-content-start mb-2" id="btnsFL">
-          <div class="col-auto">
-            <button class="btn btn-outline-light p-1 disabled mt-2 mx-2" id="btnFav">Añadir a favoritos <i
-                class="far fa-heart"></i></button>
+        <div id="cont" class="container-fluid mb-2 rounded-lg p-3" style="background-color:rgb(87, 35, 139);">
+        </div>
+        <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rgb(87, 35, 139);">
+          <div class="row mb-2 px-2">
+            <button class="btn btn-light btn-link-scckie ml-auto mr-2" id="btnEditJs"><i class="fas fa-edit" aria-hidden="true"></i></button>
+            <button class="btn btn-light btn-link-scckie ml-auto mr-2 d-none" id="btnCheckJs"><i class="fas fa-check" aria-hidden="true"></i></button>
           </div>
-          <div class="col-auto">
-            <button class="btn btn-outline-light p-1 disabled m-2" id="btnLike">Dar me gusta <i
-                class="far fa-thumbs-up"></i></button>
+          <div class="row mb-2">
+            <div class="col">
+              <label for="inJava">JavaScript</label>
+              <textarea class="form-control" rows="8" id="inJava" readonly></textarea>
+            </div>
           </div>
         </div>
+        <!--Aquí termina el contenido-->
       </div>
       <!--Anuncios V-->
       <div
@@ -306,6 +412,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
+
+  <script id="javaIns"></script>
 
   <script src="js/global.js"></script>
   <script src="js/edit.js"></script>
