fix image size 20122901

--- a/public/galletas/202012/que-tan-grandes-son-los-extraterrestres.html
+++ b/public/galletas/202012/que-tan-grandes-son-los-extraterrestres.html
@@ -261,7 +261,7 @@
                 </div>
                 <div class="col my-1">
                   <img id="hM" src="20122901img/MaHuman.png" alt="Humano marciano" class="w-100">
-                  <img id="eM" class="d-none" src="20122901img/MaElephant.png" alt="Elefante marciano" class="w-100">
+                  <img id="eM" class="w-100 d-none" src="20122901img/MaElephant.png" alt="Elefante marciano">
                   <figure id="wM" class="w-100 d-none">
                     <img src="20122901img/MaWhale.png" alt="Ballena marciana" class="w-100">
                     <figcaption class="text-center mt-1" style="font-size: 70%; font-weight: lighter;">Se cree que Marte tenía océanos en el pasado.</figcaption>
@@ -277,7 +277,7 @@
                 </div>
                 <div class="col my-1">
                   <img id="hL" src="20122901img/MoHuman.png" alt="Humano lunar" class="w-100">
-                  <img id="eL" class="d-none" src="20122901img/MoElephant.png" alt="Elefante lunar" class="w-100">
+                  <img id="eL" class="w-100 d-none" src="20122901img/MoElephant.png" alt="Elefante lunar">
                   <figure id="wL" class="w-100 d-none">
                     <img src="20122901img/MoWhale.png" alt="Ballena lunar" class="w-100">
                     <figcaption class="text-center mt-1" style="font-size: 70%; font-weight: lighter;">Si La Luna tuviera océanos</figcaption>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="col my-1">
                   <img id="hE" src="20122901img/EuHuman.png" alt="Humano de Europa" class="w-100">
-                  <img id="eE" class="d-none" src="20122901img/EuElephant.png" alt="Elefante de Europa" class="w-100">
+                  <img id="eE" class="w-100 d-none" src="20122901img/EuElephant.png" alt="Elefante de Europa">
                   <figure id="wE" class="w-100 d-none">
                     <img src="20122901img/EuWhale.png" alt="Ballena de Europa" class="w-100">
                     <figcaption class="text-center mt-1" style="font-size: 70%; font-weight: lighter;">Se cree que Europa tiene un océano bajo su superficie de hielo</figcaption>
