finished Edit.html

--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,7 @@
                   <label class="form-check-label" for="catA">Todas</label>
                 </div>
               </div>
+              <!--Categorías@#-->
               <div class="form-row justify-content-around">
                 <div class="form-group col-auto"><div class="form-check">
                   <input class="form-check-input" type="checkbox" id="cat0" value="astronomia">
@@ -221,106 +222,8 @@
               </li>
             </ul>
           </nav>
-          <!--Primeras galletas-->
-          <a href="" class="text-decoration-none text-light d-none" id="med0" ><div class="media mb-3">
-            <img id="med0img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med0t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div1"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med1"><div class="media mb-3">
-            <img id="med1img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med1t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div2"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med2"><div class="media mb-3">
-            <img id="med2img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med2t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div3"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med3"><div class="media mb-3">
-            <img id="med3img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med3t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div4"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med4"><div class="media mb-3">
-            <img id="med4img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med4t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div5"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med5"><div class="media mb-3">
-            <img id="med5img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med5t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div6"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med6"><div class="media mb-3">
-            <img id="med6img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med6t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div7"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med7"><div class="media mb-3">
-            <img id="med7img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med7t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div8"></div>
-          <a href="" class="text-decoration-none text-light d-none"><div id="med8" class="media mb-3">
-            <img id="med8img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med8t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div9"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med9"><div class="media mb-3">
-            <img id="med9img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med9t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div10"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med10"><div class="media mb-3">
-            <img id="med10img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med10t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div11"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med11"><div class="media mb-3">
-            <img id="med11img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med11t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div12"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med12"><div class="media mb-3">
-            <img id="med12img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med12t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div13"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med13"><div class="media mb-3">
-            <img id="med13img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med13t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div14"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med14"><div class="media mb-3">
-            <img id="med14img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med14t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div15"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med15"><div class="media mb-3">
-            <img id="med15img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med15t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div16"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med16"><div class="media mb-3">
-            <img id="med16img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med16t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div17"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med17"><div class="media mb-3">
-            <img id="med17img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med17t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div18"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med18"><div class="media mb-3">
-            <img id="med18img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med18t"></div>
-          </div></a>
-          <div class="dropdown-divider d-md-none d-none" id="div19"></div>
-          <a href="" class="text-decoration-none text-light d-none" id="med19"><div class="media mb-3">
-            <img id="med19img" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-            <div class="media-body" id="med19t"></div>
-          </div></a>
+          <!--Galletas-->
+          <div id="cookiesCont"></div>
           <nav aria-label="pageNavB" class="d-none" id="pgNavB">
             <ul class="pagination justify-content-end">
               <li class="page-item">
