--- a/public/editar.html
+++ b/public/editar.html
@@ -77,7 +77,7 @@
               class="d-inline-block align-center ml-2 rounded-circle" alt="" id="picUsr"></button>
           <div class="dropdown-menu dropdown-menu-right bg-dark pl-1" aria-labelledby="usrDrpdwn">
             <a id="btnPrfl" class="btn btn-link text-decoration-none text-light d-none" href="perfil">Mi perfíl</a>
-            <a id="btnPref" class="btn btn-link text-decoration-none text-light d-none"href="perfil?tab=pref">Preferencias</a>
+            <a id="btnPref" class="btn btn-link text-decoration-none text-light d-none" href="perfil?tab=pref">Preferencias</a>
             <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="drafts">Borradores</a>
             <div class="dropdown-divider ml-1 mr-2"></div>
             <button id="btnLgO" class="btn btn-link text-decoration-none text-light d-none">Cerrar sesión</button>
@@ -236,6 +236,60 @@
     </div>
   </div>
 
+  <!--Publish modal-->
+  <div class="modal fade" id="mdlPublish" tabindex="-1" role="dialog" aria-labelledby="mdlPublishL" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="mdlPublishL">Hacer pública la galleta</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="btnCanPublish1"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            <p id="mdlPublishTxt"></p>
+            <form id="frmPublish" class="d-none">
+              <!--Categorías@#-->
+              <div class="form-row justify-content-around">
+                <div class="form-group col-auto"><div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="cat0" value="astronomia">
+                  <label class="form-check-label" for="cat0">Astronomía</label>
+                </div></div>
+                <div class="form-group col-auto"><div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="cat1" value="biologia">
+                  <label class="form-check-label" for="cat1">Biología</label>
+                </div></div>
+                <div class="form-group col-auto"><div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="cat2" value="curiosidades">
+                  <label class="form-check-label" for="cat2">Curiosidades</label>
+                </div></div>
+                <div class="form-group col-auto"><div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="cat3" value="fisica">
+                  <label class="form-check-label" for="cat3">Física</label>
+                </div></div>
+                <div class="form-group col-auto"><div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="cat4" value="tecnologia">
+                  <label class="form-check-label" for="cat4">Tecnología</label>
+                </div></div>
+              </div>
+              <div class="from-row d-none" id="sendUptCont">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="inSendUpt">
+                  <label class="form-check-label" for="inSendUpt">Notificar actualización</label>
+                </div>
+              </div>
+            </form>
+            <img src="" alt="" class="@# d-none">
+            <div class="progress my-2 d-none" id="barPublishCont">
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="barPublish"></div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-scckie btn-block" id="btnCnfPublish">Publicar</button>
+            <button type="button" class="btn btn-secondary btn-block" data-dismiss="modal" id="btnCanPublish0">Cancelar</button>
+          </div>
+      </div>
+    </div>
+  </div>
+
   <!--Alertas-->
   <div id="alrtClsSsn">
 
@@ -248,6 +302,11 @@
     <div class="btn-group-vertical mr-2 btn-group-lg" role="group">
       <button class="btn btn-scckie" data-toggle="modal" data-target="#mdlPlusSect" onclick="toAdd=docDat.cont.length-1;"><i class="fas fa-plus"></i></button>
       <button class="btn btn-scckie" data-toggle="modal" data-target="#mdlMedMan"><i class="fas fa-image"></i></button>
+      <button class="btn btn-scckie d-none" id="btnPrevCook"><i class="fas fa-eye"></i></button>
+      <button class="btn btn-scckie" id="btnPrevMail"><i class="fas fa-envelope"></i></button>
+      <button class="btn btn-scckie d-none" id="btnPrivate"><i class="fas fa-lock"></i></button>
+      <button class="btn btn-scckie d-none" id="btnAprove"><i class="far fa-check-square"></i></button>
+      <button class="btn btn-scckie d-none" id="btnPub" data-toggle="modal" data-target="#mdlPublish"><i class="fas fa-paper-plane"></i></button>
     </div>
   </div>
   <div class="container-fluid text-white"
